--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.21.1)
 option(LINK_INSIGHT "Link Qt Insight Tracker library" ON)
 option(BUILD_QDS_COMPONENTS "Build design studio components" ON)
 
-project(MercuryApp LANGUAGES CXX)
+project(Helios-Mercury LANGUAGES CXX)
 
 set(CMAKE_AUTOMOC ON)
 
@@ -13,15 +13,15 @@ if (Qt6_VERSION VERSION_GREATER_EQUAL 6.3)
     qt_standard_project_setup()
 endif()
 
-qt_add_executable(MercuryApp src/main.cpp)
+qt_add_executable(Helios-Mercury src/main.cpp)
 
-qt_add_resources(MercuryApp "configuration"
+qt_add_resources(Helios-Mercury "configuration"
     PREFIX "/"
     FILES
         qtquickcontrols2.conf
 )
 
-target_link_libraries(MercuryApp PRIVATE
+target_link_libraries(Helios-Mercury PRIVATE
     Qt6::Core
     Qt6::Gui
     Qt6::Qml
@@ -45,7 +45,7 @@ if (LINK_INSIGHT)
 endif ()
 
 include(GNUInstallDirs)
-install(TARGETS MercuryApp
+install(TARGETS Helios-Mercury
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
