--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ configure_file(${CMAKE_SOURCE_DIR}/config.ini.example ${CMAKE_BINARY_DIR}/config
 find_package(Qt6 6.2 REQUIRED COMPONENTS Core Gui Qml Quick Mqtt SerialPort)
 
 if (Qt6_VERSION VERSION_GREATER_EQUAL 6.3)
+    qt_policy(SET QTP0001 NEW)
     qt_standard_project_setup()
 endif()
 
