--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -8,7 +8,9 @@ qt6_add_qml_module(content
     RESOURCE_PREFIX "/qt/qml"
     QML_FILES
         App.qml
-        Screen01.ui.qml
     RESOURCES
         fonts/fonts.txt
+        QML_FILES Clusters/RaceCluster.qml
+        QML_FILES Clusters/DebugCluster.qml
+        QML_FILES Clusters/Screen01.ui.qml
 )
