Created pinging mechanism and means to receive alternative messages from telemetry if required

--- a/config.ini.example
+++ b/config.ini.example
@@ -14,10 +14,9 @@ portName=/dev/pts/5
 baudrate=115200
 
 [Mqtt]
-localTopic=hermesExchange
-localHostname=127.0.0.1
-localPort=6969
 telemetryTopic=packet
+pingTopic=ping
+pongTopic=pong
 telemetryHostname=aedes.calgarysolarcar.ca
 telemetryPort=1883
 telemetryUsername=BEGONE
