--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_AUTOUIC ON)
 
 configure_file(${CMAKE_SOURCE_DIR}/config.ini.example ${CMAKE_BINARY_DIR}/config.ini COPYONLY)
 
-find_package(Qt6 6.2 REQUIRED COMPONENTS Core Gui Qml Quick Mqtt SerialPort)
+find_package(Qt6 6.2 REQUIRED COMPONENTS Core Gui Qml Quick Mqtt SerialPort ShaderTools)
 
 if (Qt6_VERSION VERSION_GREATER_EQUAL 6.3)
     qt_policy(SET QTP0001 NEW)
@@ -40,6 +40,7 @@ qt_add_executable(Helios-Mercury src/main.cpp
     src/Mercury.h src/Mercury.cpp
     src/Config/PropertyDefinitions.h
     src/Receivers/TelemetryReceiver.h src/Receivers/TelemetryReceiver.cpp
+
 )
 
 qt_add_resources(Helios-Mercury "configuration"
@@ -55,6 +56,7 @@ target_link_libraries(Helios-Mercury PRIVATE
     Qt6::Quick
     Qt6::Mqtt
     Qt6::SerialPort
+    Qt6::ShaderTools
 )
 
 set(QT_QML_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/qml)
@@ -83,3 +85,10 @@ install(TARGETS Helios-Mercury
 # make IDEs aware of the QML import path
 set(QML_IMPORT_PATH ${PROJECT_BINARY_DIR}/qml CACHE PATH
     "Path to the custom QML components defined by the project")
+
+qt6_add_shaders(Helios-Mercury "Helios-Mercury_shaders"
+    PREFIX
+        "/"
+    FILES
+        "content/shader.frag"
+)
