--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,10 @@ configure_file(${CMAKE_SOURCE_DIR}/config.ini.example ${CMAKE_BINARY_DIR}/config
 find_package(Qt6 6.2 REQUIRED COMPONENTS Core Gui Qml Quick Mqtt SerialPort)
 
 find_package(PkgConfig REQUIRED)
-include_directories("/home/solarcar/pigpio")
+
+add_subdirectory(${CMAKE_SOURCE_DIR}/imports/pigpio)
+include_directories(${CMAKE_SOURCE_DIR}/imports/pigpio)
+link_directories(${CMAKE_SOURCE_DIR}/imports/pigpio)
 
 if (Qt6_VERSION VERSION_GREATER_EQUAL 6.3)
     qt_policy(SET QTP0001 NEW)
@@ -60,7 +63,7 @@ target_link_libraries(Helios-Mercury PRIVATE
     Qt6::Quick
     Qt6::Mqtt
     Qt6::SerialPort
-    /home/solarcar/pigpio/libpigpio.so
+    pigpio
 )
 
 set(QT_QML_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/qml)
