--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,11 @@ find_package(Qt6 6.2 REQUIRED COMPONENTS Core Gui Qml Quick Mqtt SerialPort)
 add_custom_target(pigpio_build ALL
     COMMAND make -C ${CMAKE_SOURCE_DIR}/imports/pigpio
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/imports/pigpio
+    COMMENT "Building pigpio library"
 )
-include_directories(${CMAKE_SOURCE_DIR}/imports/pigpio)
+
+# Link the pigpio library in your main project
+add_subdirectory(${CMAKE_SOURCE_DIR}/imports/pigpio)
 
 if (Qt6_VERSION VERSION_GREATER_EQUAL 6.3)
     qt_policy(SET QTP0001 NEW)
