--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -13,5 +13,6 @@ qt6_add_qml_module(content
         QML_FILES Clusters/RaceCluster.qml
         QML_FILES Clusters/DebugCluster.qml
         QML_FILES Clusters/Screen01.ui.qml
-        RESOURCES Images/RaceClusterFrame.png
+        RESOURCES Images/raceClusterFrameBackground.png
+        RESOURCES Images/raceClusterFrameOutline.png
 )
