CMakelist will now build the pigpio library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,10 @@ configure_file(${CMAKE_SOURCE_DIR}/config.ini.example ${CMAKE_BINARY_DIR}/config
 find_package(Qt6 6.2 REQUIRED COMPONENTS Core Gui Qml Quick Mqtt SerialPort)
 
 add_subdirectory(${CMAKE_SOURCE_DIR}/imports/pigpio)
-include_directories(${CMAKE_SOURCE_DIR}/imports/pigpio)
-
+add_custom_target(build_pigpio ALL
+    COMMAND make
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/imports/pigpio
+)
 
 if (Qt6_VERSION VERSION_GREATER_EQUAL 6.3)
     qt_policy(SET QTP0001 NEW)
