--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -17,5 +17,6 @@ qt6_add_qml_module(content
         RESOURCES Images/RaceClusterFrameOutline.png
         RESOURCES Images/Arrow.png
         QML_FILES Components/ArrowIndicator.qml
+        QML_FILES Components/SmallGauge.qml
         QML_FILES Config/Config.qml
 )
