--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -15,6 +15,7 @@ qt6_add_qml_module(content
         QML_FILES Clusters/Screen01.ui.qml
         RESOURCES Images/RaceClusterFrameBackground.png
         RESOURCES Images/RaceClusterFrameOutline.png
+        RESOURCES Images/BoltIcon.png
         RESOURCES Images/Arrow.png
         QML_FILES Components/ArrowIndicator.qml
         QML_FILES Components/SmallGauge.qml
