--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -18,4 +18,5 @@ qt6_add_qml_module(content
         RESOURCES Images/Arrow.png
         QML_FILES Components/ArrowIndicator.qml
         QML_FILES Config/Config.qml
+        QML_FILES Components/FaultsMessage.qml
 )
