switched to subproject per unit test class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,8 @@ target_link_libraries(Helios-Mercury PRIVATE
 )
 
 if (BUILD_MERCURY_TESTS)
-    add_subdirectory(MercuryTests)
+    add_subdirectory(ConfigManagerTests)
+    add_subdirectory(MessageAggregatorTests)
 endif()
 
 qt_add_resources(Helios-Mercury "configuration"
