--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -15,7 +15,10 @@ qt6_add_qml_module(content
         Components/DashIcon.qml
         Components/CameraView.qml
         Config/Config.qml
-	Components/ThreeQuarterGauge.qml
+	    Components/ThreeQuarterGauge.qml
+	    Components/SmallGauge.qml
+	    Util/Util.qml
+
     RESOURCES
         fonts/fonts.txt
         Images/RaceClusterFrameBackground.png
@@ -23,4 +26,5 @@ qt6_add_qml_module(content
         Images/Arrow.png
         Images/Headlights.png
         Images/DaytimeRunningLights.png
+	    Images/BoltIcon.png
 )
