--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -15,8 +15,8 @@ qt6_add_qml_module(content
         Components/DashIcon.qml
         Components/CameraView.qml
         Config/Config.qml
-	    Components/ThreeQuarterGauge.qml
-	    Util/Util.qml
+        Components/ThreeQuarterGauge.qml
+        Util/GaugeAnimation.qml
 
     RESOURCES
         fonts/fonts.txt
