Write logs to Mercury.log

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ qt_add_executable(Helios-Mercury src/main.cpp
     src/Mercury.h src/Mercury.cpp
     src/Config/PropertyDefinitions.h
     src/Receivers/TelemetryReceiver.h src/Receivers/TelemetryReceiver.cpp
-
+    src/Config/Logger.h src/Config/Logger.cpp
 )
 
 qt_add_resources(Helios-Mercury "configuration"
