Initial animations are working

--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -16,6 +16,7 @@ qt6_add_qml_module(content
         Components/CameraView.qml
         Components/Speedometer.qml
         Config/Config.qml
+        Util/GaugeAnimation.qml
     RESOURCES
         fonts/fonts.txt
         Images/RaceClusterFrameBackground.png
