--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -23,4 +23,8 @@ qt6_add_qml_module(content
         Images/Arrow.png
         Images/Headlights.png
         Images/DaytimeRunningLights.png
+        Images/RadioBoardConnected.png
+        Images/RadioBoardDisconnected.png
+        Images/TelemetryConnected.png
+        Images/TelemetryDisconnected.png
 )
