--- a/config.ini.example
+++ b/config.ini.example
@@ -17,6 +17,7 @@ baudrate=115200
 telemetryTopic=packet
 pingTopic=ping
 pongTopic=pong
+recieverTopic=telemetryToCar
 telemetryHostname=aedes.IDontWantToKeepConnecting.ca
 telemetryPort=1883
 telemetryUsername=BEGONE
