implemented temperature gauge

--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -19,6 +19,7 @@ qt6_add_qml_module(content
         Config/Config.qml
 	Components/BatteryIcon.qml
         Components/ThreeQuarterGauge.qml
+        Components/TemperatureGauge.qml
         Util/GaugeAnimation.qml
     RESOURCES
         fonts/fonts.txt
@@ -29,4 +30,8 @@ qt6_add_qml_module(content
         Images/DaytimeRunningLights.png
 	Images/Battery.png
         Images/ParkingBrake.png
+        Images/HOT.png
+        Images/COOL.png
+        Images/TempBar.png
+        Images/ThermometerIcon.png
 )
