--- a/config.ini.example
+++ b/config.ini.example
@@ -1,4 +1,4 @@
-; Hermes Specification File
+; Mercury Specification File
 
 forwardPeriod=500
 
@@ -25,3 +25,7 @@ telemetryPassword=NiceTryBud
 [Logging]
 loggingEnabled=true
 logPath=Mercury.log
+
+[Gpio]
+rfidPin0=20
+rfidPin1=21
