VSC585 added GaugeTemplate and BoltIcon to cmake, removed LargeGauge

--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -20,7 +20,7 @@ qt6_add_qml_module(content
 	Components/BatteryIcon.qml
         Components/ThreeQuarterGauge.qml
         Util/GaugeAnimation.qml
-        Components/LargeGauge.qml
+        Components/GaugeTemplate.qml
     RESOURCES
         fonts/fonts.txt
         Images/RaceClusterFrameBackground.png
@@ -31,4 +31,5 @@ qt6_add_qml_module(content
 	Images/Battery.png
         Images/ParkingBrake.png
         Images/AccelerationIcon.png
+        Images/BoltIcon.png
 )
