--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -26,4 +26,5 @@ qt6_add_qml_module(content
         Images/Arrow.png
         Images/Headlights.png
         Images/DaytimeRunningLights.png
+        Shaders/ColorOverlay.frag
 )
