--- a/.github/workflows/mercury-build.yml
+++ b/.github/workflows/mercury-build.yml
@@ -17,9 +17,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Install dependencies
       - name: Install dependencies
         run: |
+          sudo apt-get update
+          # Add Qt repository for missing packages
+          sudo apt-get install -y software-properties-common
+          sudo add-apt-repository ppa:beineri/opt-qt-6.5.0 -y
           sudo apt-get update
           sudo apt-get install -y \
               build-essential \
