Add QT packages

--- a/.github/workflows/mercury-build.yml
+++ b/.github/workflows/mercury-build.yml
@@ -22,6 +22,8 @@ jobs:
           sudo apt-get update
           # Add Qt repository for missing packages
           sudo apt-get install -y software-properties-common
+          wget -qO - https://download.qt.io/online/qtsdkrepository/linux_x64/desktop/tools/qt.tools.qtcreator/qt.tools.qtcreator.4.15.2-0.20210729-3-online-linux-x64.tar.gz | sudo apt-key add -
+          sudo add-apt-repository "deb https://download.qt.io/official_releases/online_installer_releases/ linux main"
           sudo apt-get update
           sudo apt-get install -y \
               qt6-* \
