--- a/.github/workflows/mercury-build.yml
+++ b/.github/workflows/mercury-build.yml
@@ -20,10 +20,10 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          # Add Qt repository for missing packages
           sudo apt-get install -y software-properties-common
-          wget -qO - https://download.qt.io/online/qtsdkrepository/linux_x64/desktop/tools/qt.tools.qtcreator/qt.tools.qtcreator.4.15.2-0.20210729-3-online-linux-x64.tar.gz | sudo apt-key add -
-          sudo add-apt-repository "deb https://download.qt.io/official_releases/online_installer_releases/ linux main"
+          sudo mkdir -p /etc/apt/keyrings
+          wget -qO - https://download.qt.io/official_releases/online_installer_releases/keys/qt-official.gpg | sudo tee /etc/apt/keyrings/qt-official.gpg > /dev/null
+          echo "deb [signed-by=/etc/apt/keyrings/qt-official.gpg] https://download.qt.io/official_releases/online_installer_releases/ linux main" | sudo tee /etc/apt/sources.list.d/qt-official.list
           sudo apt-get update
           sudo apt-get install -y \
               qt6-* \
