--- a/.github/workflows/mercury-build.yml
+++ b/.github/workflows/mercury-build.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt-get update \
+          sudo apt-get update
           sudo apt list qt6-*
         #         sudo apt-get install -y software-properties-common
         #         sudo mkdir -p /etc/apt/keyrings
