--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -49,5 +49,5 @@ qt6_add_qml_module(content
         Images/ThermometerIcon.png
         Images/AccelerationIcon.png
         Images/BoltIcon.png
-        Images/Exclaimation.png
+        Images/Exclamation.png
 )
