--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -50,4 +50,6 @@ qt6_add_qml_module(content
         Images/AccelerationIcon.png
         Images/BoltIcon.png
         Images/FanIcon.png
+        Images/RotationIcon.png
+        Images/DirectionIcon.png
 )
