VSC620 created backplate component

--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -32,6 +32,7 @@ qt6_add_qml_module(content
         Components/TemperatureGauge.qml
         Util/GaugeAnimation.qml
         Components/GaugeTemplate.qml
+        Components/Backplate.qml
     RESOURCES
         fonts/fonts.txt
         Images/MotorFault.png
