--- a/config.ini.example
+++ b/config.ini.example
@@ -10,12 +10,12 @@ numberOfMppts=4
 packetTitle=Helios
 
 [SerialPort]
-portName=/dev/ttys017
+portName=/dev/pts/5
 baudrate=115200
 
 [Can]
 interface=can0
-enabled=false
+enabled=true
 
 [Mqtt]
 telemetryTopic=packet
